# greencity-pyats-tests

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml  requirements.txt  testbed.yaml
config/: test_data.yaml  testbed.yaml
data/: .env.example  config.py
jobs/: greencity_job.py
schema/: user_profile_schema.py
schemas/: auth_schema.py  habits_schema.py  profile_schema.py
tests/: __init__.py  base_test.py  common_setup.py  test_auth.py  test_auth_integrity.py  test_crud.py  test_data_driven.py  test_ddt.py  test_environment.py  test_greencity_profile.py  test_habits.py  test_habits_crud.py  test_negative.py  test_negative_api.py  test_performance.py  test_profile.py  test_rbac.py  test_reachability.py  test_security.py  test_stability.py  test_user_profile.py
tests/eco_news/: create_eco_news_job.py  create_eco_news_testscript.py
utils/: __init__.py  api_auth_token.py  api_client.py  auth_helper.py  config.py  data_loader.py  logger.py  schema_validator.py  shared_setup.py
